--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 jobs:
-  install: go get https://github.com/errata-ai/vale
+  install: go get github.com/errata-ai/vale
   script: vale --glob='*.{md,rst}' directory
