--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 jobs:
-  install: go get github.com/errata-ai/vale
+  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
   script: vale --glob='*.{md,rst}' directory
