--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 jobs:
-  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
+  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0; export PATH="./bin:$PATH"
   script: vale --glob='*.{md,rst}' directory
