--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
-jobs:
-  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
-  script: export PATH="./bin:$PATH"; vale --glob='*.{md,rst}' directory
+# jobs:
+#  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
+#  script: export PATH="./bin:$PATH"; vale --glob='*.{md,rst}' directory
+
+script:
+  - ./scripts/$TEST_SUITE.sh
