--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@
 #  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
 #  script: export PATH="./bin:$PATH"; vale --glob='*.{md,rst}' directory
 
+before_install:
+  - chmod +x ./scripts/vale.sh
+
 script:
   - ./scripts/vale.sh
