--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-# jobs:
-#  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
-#  script: export PATH="./bin:$PATH"; vale --glob='*.{md,rst}' directory
+jobs:
+  install: curl -sfL https://install.goreleaser.com/github.com/ValeLint/vale.sh | sh -s v2.2.0
+  script: export PATH="./bin:$PATH"; vale --glob='*.{md,rst}' docs
 
-before_install:
-  - chmod +x ./scripts/vale.sh
+# before_install:
+#  - chmod +x ./scripts/vale.sh
 
-script:
-  - ./scripts/vale.sh
+#script:
+#  - ./scripts/vale.sh
