--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ TEST=
   lint: lint
 
 [testenv:lint]
-changedir = {toxinidir}/docs
+# changedir = {toxinidir}/docs
 whitelist_externals = vale
 commands =
-    vale --glob=docs
+    vale docs
